# Goo

./: .gitignore  .gitignore.orig  .gitlab-ci.yml  CMakeLists.txt  ClangOverrides.txt  CodingStyle_C_CPP  LICENSE  README.md  TODO  branch-iss196-notes.2rem  clang_building_snippet.tmp  glibc2.17.supp  notes.2rem  one.dot
assets/buildsystems/: FindGoo.cmake  FindGoo.cmake.in  GooConfig.cmake  GooConfig.cmake.in  goo.pc  goo.pc.in
assets/dev/: autocompletion  runbuild.sh  template-beautifier.pl  testbuild.pl
contrib/cmake/: BuildConf.cmake  FindBFD.cmake  FindBISON.custom  FindFLEX.custom  FindLibEvent.custom  FindLibIberty.cmake  FindLzo.cmake  OptionDepend.cmake  OptionList.cmake  OutOfSource.cmake  PyExtensions.cmake  PyExtensions_init-template.in  cmake_uninstall.cmake.in
contrib/cmake/cmake-haskell/: CMakeDetermineHaskellCompiler.cmake  CMakeHaskellCompiler.cmake.in  CMakeHaskellInformation.cmake  README
contrib/drafts/: getoptlong.c
contrib/grammar/: appParameters.l  appParameters.y  gds.l  gds.l.orig  gds.y  gds.y.orig
contrib/spec/: data.gds  grammar_backup.tmp  math.gds  notes_ru.txt  numerical.gds  parameters_tree.cpp  parser.c  polynomial.gds  specification.gds  specification_2.gds  strings.gds  test_1.gds
debug/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
debug/utils/: Makefile  cmake_install.cmake
debug/utils/UnitTests/: Makefile  cmake_install.cmake
doc/: dict.md
doc/diagrams/: parametersSet.mdj
examples/application/: CMakeLists.txt  README.md  exampleApp.cpp  exampleApp.hpp  main.cpp
examples/sysexec/: Makefile  main.c
inc/: goo_ansi_escseq.h  goo_app.hpp  goo_bitset.hpp  goo_config.h.in  goo_dataflow.hpp  goo_exception.hpp  goo_iterable.tcc  goo_mixins.tcc  goo_path.hpp  goo_quaternion.tcc  goo_tsort.tcc  goo_types.h  goo_types.h.orig  goo_utility.h  goo_utility.h.orig  goo_utility.hpp  goo_vcopy.tcc  goo_versioning.h  goo_xform.tcc  hph_hs_utility.h  hph_iterators.tcc  hph_versioning.h
inc/dict/: goo_dict.hpp  goo_dict_parameter.tcc  goo_insertion_proxy.hpp
inc/gds/: arithmetic_eval.h  diagnostic.h  errtable.h  expression.h  expression.h.orig  goo_array.h  goo_expressions.h  goo_functions.h  goo_gds_forwards.h  goo_interpreter.h  goo_list.h  goo_literals.h  goo_range.h  goo_variables.h  interpreter.h  interpreter.h.depr  literals.h  literals.h.orig
inc/goo_dataflow/: framework.hpp  processor.hpp  tier.hpp  worker.hpp
inc/goo_dict/: abstract_parameter.hpp  app_conf_info.hpp  asp_unwind.tcc  common_aspects.hpp  conf_help_render.hpp  configuration.hpp  dict.hpp  dpath.hpp  generic_dict.tcc  injection.hpp  insertion_proxy.tcc  parameter.tcc  parameter_abstract.hpp  parameter_dict.hpp  parameter_singular.tcc  parameter_values.hpp  plural.hpp  singular_parameter.tcc  types.hpp  value.hpp  values.hpp
inc/goo_dict/appCfg/: configuration.hpp  insertion_proxy.tcc  traits.hpp
inc/goo_dict/common/: traits.hpp
inc/goo_dict/parameters/: enum_parameter.tcc  floating_point.tcc  integral.tcc  logic.hpp  los.hpp  path_parameter.hpp  pointer_parameter.tcc  string.hpp
inc/goo_dict/util/: conf_help_render.hpp  dpath.hpp  injection.hpp  (+1 more)
inc/goo_mixins/: basicOperators.tcc  iterable.tcc  numericWrapper.tcc  subscriber.tcc  vcopy.tcc
inc/goo_offcuts/: iterators.itcc
inc/goo_plotting/: colors.hpp  nicenum.h  palette.h
inc/goo_sys/: ansi_escseq.h  app.hpp  exception.hpp  heap.hpp  path.hpp  ptr.tcc  sysexec.h
inc/goo_ui/: camera.tcc  ogl_camera.hpp  spatial_vector.tcc  viewer_3d_fltk.hpp
inc/offcuts/: iterators.itcc
inc/streams/: goo_AbstractStream.tcc  goo_AbstractStreamBase.hpp  goo_SDLM.tcc  goo_descriptor.h  goo_ds_bases.hpp  goo_iSDLM.tcc  goo_layout.tcc  goo_reflection.h  goo_representation.tcc  goo_resource.tcc  goo_series.hpp  goo_storable.hpp  goo_stream.tcc
inc/ui/: camera.tcc
src/: backtrace-symbols.c  gds_lexer.generated.c  gds_parser.generated.c  gds_parser.generated.h  gds_parser.generated.output  goo_app.cpp  goo_bitset.cpp  goo_exception.cpp  goo_nicenum.c  goo_path.cpp  goo_sysexec.c  goo_tsort.cpp  goo_types.c  goo_types.cpp  goo_utility.c  goo_utility.c.orig  goo_utility.cpp  goo_versioning.c  hph_allocator.cpp  hph_exception.cpp  hph_versioning.c
src/dict/: insertion_proxy.cpp
src/gds/: arithmetic_eval.c  arithmetic_eval.cpp  binop_table.c  diagnostic.c  errtable.cpp  expression.c  goo_array.c  goo_eval.c  goo_expressions.c  goo_functions.c  goo_interpreter.c  goo_interpreter.cpp  goo_literals.c  goo_range.c  goo_variables.c  interpreter.c  interpreter.cpp  literals.c  literals.c.orig
src/goo_dataflow/: framework.cpp  processor.cpp  tier.cpp  worker.cpp
src/goo_dict/: abstract_parameter.cpp  app_conf_info.cpp  common_aspects.cpp  conf_help_render.cpp  configuration.cpp  dict.cpp  dpath.cpp  injection.cpp  insertion_proxy.cpp  parameter.cpp  parameter.tcc  parameter_abstract.cpp  parameter_dict.cpp  parameter_singular.cpp  plural.cpp  types.cpp
src/goo_plotting/: nicenum.c  palette.c
src/goo_sys/: app.cpp  exception.cpp  path.cpp  sysexec.c
src/goo_ui/: ogl_camera.cpp  viewer_3d_fltk.cpp
src/plotting/: palette.c
src/streams/: goo_reflection.c
utils/: CMakeLists.txt  CMakeLists.txt.orig
utils/3dViewDemo/: CMakeLists.txt
utils/3dViewDemo/inc/: 3D_viewer.hpp
utils/3dViewDemo/src/: 3D_viewer.cpp  main.cpp
utils/SystemTests/: CMakeLists.txt
utils/SystemTests/inc/: systest.hpp
utils/SystemTests/script/: 2call.sh
utils/SystemTests/src/: main.cpp  systest.cpp
utils/UnitTests/: CMakeLists.txt  README.md
utils/UnitTests/inc/: gds-math-eval.h  utest.hpp
utils/UnitTests/src/: .ut_types.cpp.depr  app_conf.cpp  bitset.cpp  dag.cpp  dag_dfs.cpp  dataflow.cpp  dataflow_err.cpp  dstreams.cpp  dstrems.cpp  gds-math-eval.c  gds-math-eval.c.orig  gds-math-eval.cpp  gds-math-eval.cpp.orig  iterators.cpp  main.cpp  pdict.cpp  referable.cpp  tsort.cpp  types.cpp  ut_allocator.cpp  ut_iterators.cpp  ut_serialization.cpp  ut_types.cpp  utest.cpp  utils.cpp  vcopy.cpp  xform.cpp
utils/gdsi/: CMakeLists.txt  main.cpp
utils/uiDemo/inc/: fl_3D_viewer.hpp
utils/uiDemo/src/: fl_3D_viewer.cpp
(+15 files in other folders)
